	  accessibility tools (Marc Mulcahy)
	* Improved accessibility in conversation windows (Nathan Fredrickson)
	* Keyboard access to context menus via Shift+F10 (Marc Mulcahy)
	* TCL Plugin API changed
	* Tabs now stay green when they are supposed to (Etan Reisner)
	* Offline accounts in account drop-down lists are now greyed (Etan Reisner)
	* Catalan translation updated (Xan (DXpublica))
	* English (British) translation updated (Luke Ross (lukeross))
	* Hebrew translation had 1 character removed (Ambrose C. LI)
	* Russian translation updated (Alexandre Prokoudine)
	* Spanish translation updated (Javier Fernandez-Sanguino Pena and
	  Francisco Javier F. Serrador)

version 0.75 (01/09/2004):
	* New Yahoo! auth method
	* Yahoo! file transfer (Tim Ringenbach)
	* Yahoo! chat joining fixes (Tim Ringenbach)
	* Persons can auto-expand when hovering your mouse over it
	* Improved i18n support for MSN email notification (Felipe Contreras)
	* Jabber SASL PLAIN support
	* Improved Jabber MUC (Chat) support
	* Fixed an MSN login bug some people likely experienced (Felipe Contreras)
	* Touch-up various dialogs to follow the Gnome Human Interface
	  Guidelines more closely (Steven Garrity, Nathan Fredrickson, and
	  Ka-Hing Cheung)
	* Works better with all-black gtk themes (Etan Reisner)
	* Mozilla Firebird support (Chris (darth_sebulba04))
	* Catalan translation updated (Xan (DXpublica))
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Czech translation updated (Stanislav Brabec, Miloslav Trmac)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* English (British) translation re-added (Luke Ross (lukeross))
	* Finnish translation updated (Arto Alakulju)
	* French translation updated (Eric Boumaour)
	* German translation updated (Bjoern Voigt)
	* Italian translation updated (Claudio Satriano)
	* Japanese translation updated (Ambrose Li)