@@ -43,6 +43,7 @@ Nathan Fredrickson
 Free Software Foundation
 Decklin Foster
 Adam Fritzler
+Ignacy Gawedzki
 Michael Golden
 Ryan C. Gordon
 Christian Hammond
